--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ionic-native/core": "^5.33.1",
     "@ionic-native/splash-screen": "^5.33.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-android": "8.1.0",
+    "cordova-plugin-inappbrowser": "^4.1.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -43,6 +45,11 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -62,7 +69,13 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-splashscreen": {}
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-inappbrowser": {}
     }
   }
 }
